--- a/public/style/personal_page.css
+++ b/public/style/personal_page.css
@@ -1,5 +1,11 @@
 @import url(../style/common.css);
 
+html, body {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 .content {
     width: 100%;
     height: 100vh;
@@ -24,11 +30,18 @@
     border-radius: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border: none;
-    width: 260px;
-    height: 230px;
+    min-width: 260px;
+    min-height: 230px;
+    width: auto;
+    height: auto;
     text-align: center;
     padding: 60px 15px 15px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .return-menu-btn {
@@ -44,11 +57,6 @@
     outline: none;
     transition: background-color 0.2s;
 }
-
-.card .name {
-    font-size: 19px;
-    font-weight: bold;
-}
   
 .profile-img {
     width: 100px;
@@ -61,9 +69,13 @@
     transform: translateX(-50%);
 }
 
-.name {
+.card .name {
     margin-top: 50px;
     color: rgb(62,73,115);
+    max-width: 300px;
+    text-align: center;
+    font-size: 19px;
+    font-weight: bold;
 }
 
 .location {
@@ -83,53 +95,69 @@
     text-align: center;
     flex-direction: column;
     margin-right: 15px;
+
 }
 .emp-info-title {
     margin: 0;
     font-size: 12px;
     color: rgba(191,199,223,255);
-    margin: 0;
 }
 .emp-info-content {
     font-size: 15px;
     color: rgb(62,73,115);
     margin: 0;
-    text-wrap: nowrap;
+    white-space: normal;   
+    max-width: 200px;
+}
+.emp-info-title.position {
+    max-width: 150px;
+    width: auto;
 }
 .stats {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 13px;
 }
+.stats-2  {
+    display: grid;
+    grid-gap: 13px;
+}
+.stats-2 .stat {
+    height: 70px;
+}
 .stat {
-    width: 220px;
-    height: auto;
     background-color: #fff;
     display: flex;
     align-items: center;
     border-radius: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 10px 10px;
-}
-.stat.first {
+    padding: 10px;
+    height: auto; 
     width: 220px;
 }
-.stat.second {
-    width: 270px;
+.stat img {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px; 
+}
+
+.stat .info {
+    flex-grow: 1;
+    text-align: left;
+}
+
+.stat.complaint {
+    background: linear-gradient(135deg, rgba(127,128,255,255), rgba(76,39,255,255));
+    color: #fff;
 }
 .stat.second img,
 .stat.first img {
     width: 50px;
     height: 50px;
 }
-.stat.third {
-    display: flex;
-    justify-content: space-between;
-    width: 256px;
-}
 .stat.third.med-sign {
     display: flex;
     justify-content: space-between;
-    width: 256px;
     height: 70px;
 }
 .stat img {
@@ -146,16 +174,16 @@
     display: block; 
     width: 50%;
 }
-.stats .label,
-.stats .value {
+.label,
+.value {
     text-align: left;
     margin: 0; 
 }
-.stats .label {
+.label {
     font-size: 12px;
     color: rgba(191,199,223,255);
 }
-.stats .value {
+.value {
     font-size: 17px;
     color: rgb(62,73,115);
     font-weight: bold;
